manifests/application/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: notejam-app-service
  labels:
    app: notejam-app
spec:
  ports:
  - port: 3000
    name: notejam-app
  selector:
    app: notejam-app
